@@ -9,6 +9,7 @@ Change log next version
 * RestAssured.oauth2("accessToken") now uses PreemptiveOAuth2HeaderScheme instead of OAuth2Scheme
 * Added body params in OAuthRequest (issue 868) (thanks to Corneliu Duplachi for pull request)
 * Set authentication once to set in SecurityContextHolder and Principal in method parameter in the MockMvc module (thanks to Leonard Siu for pull request)
+* Allow passing multi-parts with content-types not starting with "multipart/" but also containing "multipart+" such as "application/x-hub-multipart+xml" (issue 919)
 
 Change log 3.0.3 (2017-05-05)
 -----------------------------
